moved phonify library and showMessage function to base.html

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -37,6 +37,12 @@
     <script src="{% static gentelella_static|add:"fastclick/lib/fastclick.js" %}"></script>
     <!-- NProgress -->
     <script src="{% static gentelella_static|add:"nprogress/nprogress.js" %}"></script>
+
+    <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
+    <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
+    <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
+    <script src="{% static "js/showMessage.js" %}"></script>
+
     <!-- Custom Theme Scripts -->
     <script src="{% static "js/custom.js" %}"></script>
     {% endwith %}
