removed css of pnotify library because was moved to base.html

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -20,6 +20,11 @@
     <link href="{% static gentelella_static|add:"nprogress/nprogress.css" %}" rel="stylesheet">
     <!-- Custom Theme Style -->
     <link href="{% block stylesheet %}{% static gentelella_static|add:"../build/css/custom.min.css" %}{% endblock %}" rel="stylesheet">
+    <!-- PNotify -->
+    <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
+    <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
+    <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
+
     {% block extrastyle %}{% endblock %}
     {% block css %}{% endblock %}
     {% block extrahead %}{% endblock %}
