--- a/travel/templates/travel/byTravelTime.html
+++ b/travel/templates/travel/byTravelTime.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <!-- div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
@@ -142,10 +142,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div-->
 
         <div class="row">
 
+
+            
             {# Graphs #}
             <div class="col-md-6 col-sm-12 col-xs-12">
                 <div class="x_panel">
@@ -171,6 +173,11 @@
                             <small> para <strong id="expeditionNumber">N</strong> viajes</small>
                         </h2>
                         <div class="clearfix"></div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                        <label class="control-label" for="sectorSelector">Sector de Destino:</label>
+                        <select class="form-control" id='sectorSelector'>
+                        </select>
                     </div>
                     <div class="x_content">
                         <div id="mapChart" style="height:400px;"></div>
