--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base_site.html' %}
 {% load static %}
 
-{% block title %}Indicadores: Tiempo de Viaje{% endblock %}
+{% block title %}Indicadores: Mapa{% endblock %}
 
 {% block css %}
 
@@ -14,23 +14,11 @@
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
         <!-- iCheck -->
         <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
-
-        <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}"
-              rel="stylesheet">
-        <link href="{% static gentelella_static|add:"datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}"
-              rel="stylesheet">
-        <link href="{% static gentelella_static|add:"datatables.net-responsive-bs/css/responsive.bootstrap.min.css" %}"
-              rel="stylesheet">
-        <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}"
-              rel="stylesheet">
-        <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}"
-              rel="stylesheet">
-
     {% endwith %}
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"/>
-    <link href="{% static "travel/css/baseline.css" %}" rel="stylesheet">
-    <link href="{% static "travel/css/by_travel_time.css" %}" rel="stylesheet">
+    <link href="{% static "travel/css/generic.css" %}" rel="stylesheet">
+    <link href="{% static "travel/css/map.css" %}" rel="stylesheet">
 
 {% endblock %}
 
@@ -40,7 +28,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Tiempo de Viaje
+                <h3>Mapa de Viajes
                     <small>Indicadores</small>
                 </h3>
             </div>
@@ -54,7 +42,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2><i class="fa fa-filter"></i> Filtro
+                        <h2><i class="fa fa-filter"></i> Filtros
                             <small></small>
                         </h2>
                         <div class="clearfix"></div>
@@ -83,26 +71,8 @@
                             </select>
                         </div>
 
-{#                        <div class="col-md-4 col-sm-12 col-xs-12 form-group">#}
-{#                            <label class="control-label" for="communeFilter">Comuna:</label>#}
-{#                            <select class="form-control" id='communeFilter' multiple="multiple">#}
-{#                                {% for commune in communes %}#}
-{#                                    <option value="{{ commune.pk }}">{{ commune.prettyName }}</option>#}
-{#                                {% endfor %}#}
-{#                            </select>#}
-{#                        </div>#}
-{##}
-{#                        <div class="col-md-4 col-sm-12 col-xs-12 form-group">#}
-{#                            <label class="control-label" for="halfhourFilter">Media Hora:</label>#}
-{#                            <select class="form-control" id='halfhourFilter' multiple="multiple">#}
-{#                                {% for halfhour in halfhours %}#}
-{#                                    <option value="{{ halfhour.pk }}">{{ halfhour.shortName }}</option>#}
-{#                                {% endfor %}#}
-{#                            </select>#}
-{#                        </div>#}
-
-                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                            <div class="ln_solid"></div>
+                        <div class="col-md-2 col-sm-12 col-xs-12 form-group">
+                            {# <div class="ln_solid"></div> #}
                             <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">
                                 Actualizar datos
                             </button>
@@ -113,72 +83,42 @@
             </div>
         </div>
 
-        <!-- div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2><i class="fa fa-list-ol"></i> Viajes (<strong id="expeditionNumber2">N</strong>)</h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <table id="expeditionDetail"
-                               class="table table-striped table-bordered dt-responsive table-condensed nowrap"
-                               width="100%">
-                            <thead>
-                            <tr>
-                                <th style="padding-right:5px;">
-                                    <input type="checkbox" id="checkbox-select-all" class="flat" checked/>
-                                </th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                            </thead>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div-->
-
         <div class="row">
 
-
-            
-            {# Graphs #}
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            {# Selection Bar #}
+            <div class="col-md-3 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2><i class="fa fa-clock-o"></i> Tiempo de viaje promedio
-                            <small> para <strong id="expeditionNumber">N</strong> viajes</small>
+                        <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
+                            <small></small>
                         </h2>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <div class="col-md-9 col-sm-9 col-xs-12">
-                            <div id="barChart" style="height:400px;"></div>
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="sectorSelector">Sector de Destino:</label>
+                            <select class="form-control" id='sectorSelector'>
+                            </select>
+                        </div>
+
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="vizSelector">Variable a mostrar:</label>
+                            <select class="form-control" id='vizSelector'>
+                            </select>
                         </div>
                     </div>
                 </div>
             </div>
 
             {# Map #}
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="col-md-9 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2><i class="fa fa-map-o"></i> Tiempo de viaje a sector
-                            <small> para <strong id="expeditionNumber">N</strong> viajes</small>
+                        <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
+                            <small><strong id="visualization_type_doc_count">0</strong> viajes encontrados</small>
                         </h2>
                         <div class="clearfix"></div>
-                    </div>
-                    <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                        <label class="control-label" for="sectorSelector">Sector de Destino:</label>
-                        <select class="form-control" id='sectorSelector'>
-                        </select>
-                    </div>
+                    </div> 
                     <div class="x_content">
                         <div id="mapChart" style="height:400px;"></div>
                     </div>
@@ -198,12 +138,6 @@
         <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
         <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
         <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net/js/jquery.dataTables.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-bs/js/dataTables.bootstrap.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
     {% endwith %}
@@ -221,9 +155,24 @@
         // console.log(_allCommunes);
         // console.log(_allHalfhours);
         // console.log(_allTimeperiods);
+
+        var _dayTypes = {
+            0: "Laboral",
+            1: "Sábado",
+            2: "Domingo"
+        };
+
+        var _dayTypes_reversed = {
+            "Laboral": 0,
+            "Sábado": 1,
+            "Domingo": 2
+        };
     </script>
 
-    <script src="{% static "travel/js/by_travel_time.js" %}"></script>
-
+    <script src="{% static "travel/js/util.js" %}"></script>
+    <script src="{% static "travel/js/maps.js" %}"></script>
+    <script src="{% static "travel/js/form.js" %}"></script>
+    <script src="{% static "travel/js/data.js" %}"></script>
+    <script src="{% static "travel/js/travel_map.js" %}"></script>
 
 {% endblock %}
