--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -1,13 +1,13 @@
 {% extends 'admin/base_site.html' %}
-{% load static %}
+{% load static header panel inline_select table columns update_button %}
 
-{% block title %}Perfil por expedición{% endblock %}
+{% block title %}Perfil de carga por expedición{% endblock %}
 
 {% block css %}
 {% with "components/gentelella/vendors/" as gentelella_static %}
   <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}" rel="stylesheet">
   <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-<!-- iCheck -->
+  <!-- iCheck -->
   <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
 
   <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}" rel="stylesheet">
@@ -25,143 +25,45 @@
 {% endblock %}
 
 {% block content %}
-<div class="">
-  <div class="page-title">
-    <div class="title_left">
-      <h3>Perfil de carga <small>por ruta</small></h3>
-    </div>
-    <div class="title_right">
-    </div>
-  </div>
-  <div class="clearfix"></div>
-  <br />
+    {% header "Perfil deá carga" "por ruta" %}
 
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-filter"></i> Filtro <small></small></h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dateFromFilter">Día:</label>
-            <select type="text" id="dayFilter" placeholder="Día" class="form-control">
-              {% for day in days %}
-              <option>{{ day }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <!--
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dateFromFilter">Desde:</label>
-            <input type="text" id="dateFromFilter" placeholder="Desde" class="form-control">
-          </div>
+    {% inline_select "Día:" "dayFilter" days as days_select %}
+    {% columns 2 2 12 days_select as col1 %}
 
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dateToFilter">Hasta:</label>
-            <input type="text" id="dateToFilter" placeholder="Hasta" class="form-control">
-          </div>
-          -->
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="routeFilter">Servicio-sentido:</label>
-            <!-- <input type="text" id="routeFilter" placeholder="Servicio sentido" class="form-control">-->
-            <select class="form-control" id='routeFilter'>
-              {% for route in routes %}
-              <option>{{ route }}</option>
-              {% endfor %}
-            </select>
-          </div>
+    {% inline_select "Servicio-sentido:" "routeFilter" routes as route_select %}
+    {% columns 2 2 12 route_select as col2 %}
 
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dayTypeFilter">Tipo de día:</label>
-            <select class="form-control" id='dayTypeFilter' multiple="multiple">
-              {% for dayType in dayTypes %}
-              <option>{{ dayType }}</option>
-              {% endfor %}
-            </select>
-          </div>
+    {% inline_select "Tipo de día:" "dayTypeFilter" dayTypes True as dayType_select %}
+    {% columns 2 2 12 dayType_select as col3 %}
 
-          <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="periodFilter">Período:</label>
-            <select class="form-control" id='periodFilter' multiple="multiple">
-              {% for period in periods %}
-              <option>{{ period }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <!--
-          <div class="row">
-            <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-              <label class="control-label" for="licensePlateFilter">Patente:</label>
-              <input type="text" id="licensePlateFilter" placeholder="Patente" class="tags form-control">
-            </div>
+    {% inline_select "Período:" "periodFilter" periods True as period_select %}
+    {% columns 2 2 12 period_select as col4 %}
 
-            <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-              <label class="control-label" for="licensePlateFilter">Expedición id:</label>
-              <input type="text" id="expeditionIdFilter" placeholder="Patente" class="tags form-control">
-            </div>
-          </div>-->
-          <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-            <div class="ln_solid"></div>
-            <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">Actualizar datos</button>
-          </div>
-        </div>
-      </div>
+    {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
+    {% columns 12 12 12 update_button as col5 %}
+
+    {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5 %}
     </div>
-  </div>
-
-  <div class="row">
-  <div class="col-md-12 col-sm-12 col-xs-12">
-    <div class="x_panel">
-      <div class="x_title">
-        <h2><i class="fa fa-bar-chart"></i> Perfil de carga promedio<small> para <strong id="expeditionNumber">N</strong> expediciones</small></h2>
-        <div class="clearfix"></div>
-      </div>
-      <div class="x_content">
-        <div class="col-md-9 col-sm-9 col-xs-12">
-          <div id="barChart" style="height:400px;"></div>
-        </div>
-        <div class="col-md-3 col-sm-3 col-xs-12">
-          <h4><i class="fa fa-clock-o"></i> Expediciones por hora</h4>
-          <div id="timePeriodChart" style="height:89px;"></div>
-          <h4><i class="fa fa-truck"></i> Expediciones por patente <strong id="licensePlateNumber">(N)</strong></h4>
-          <div id="wordcloudChart1" style="height:100px;"></div>
-          <h4><i class="fa fa-calendar"></i> Expediciones por tipo de día</h4>
-          <div id="wordcloudChart2" style="height:100px;"></div>
-        </div>
-      </div>
-    </div>
-  </div>
   </div>
 
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-truck"></i> Expediciones (<strong id="expeditionNumber2">N</strong>)</h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-          <table id="expeditionDetail" class="table table-striped table-bordered dt-responsive table-condensed nowrap" width="100%">
-            <thead>
-              <tr>
-              <th style="padding-right:5px;"><input type="checkbox" id="checkbox-select-all" class="flat" checked></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              </tr>
-            </thead>
-          </table>
-        </div>
-      </div>
+        {% with barChart='<div id="barChart" style="height:400px;"></div>' resume1='<h4><i class="fa fa-clock-o"></i> Expediciones por hora</h4><div id="timePeriodChart" style="height:89px;"></div>' resume2='<h4><i class="fa fa-truck"></i> Expediciones por patente <strong id="licensePlateNumber">(N)</strong></h4><div id="wordcloudChart1" style="height:100px;"></div>' resume3='<h4><i class="fa fa-calendar"></i> Expediciones por tipo de día</h4><div id="wordcloudChart2" style="height:100px;"></div>' %}
+            {% columns 9 9 12 barChart as col6 %}
+            {% columns 3 3 12 resume1|add:resume2|add:resume3 as col7 %}
+            {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" col6|add:col7 %}
+        {% endwith %}
     </div>
   </div>
-</div>
+
+  <div class="row">
+    <div class="col-md-12 col-sm-12 col-xs-12">
+        {% table "expeditionDetail" 8 as expeditionTable %}
+        {% panel "fa-truck" 'Expediciones (<strong id="expeditionNumber2">N</strong>)' expeditionTable %}
+    </div>
+  </div>
 {% endblock %}
 
 {% block js %}
@@ -186,7 +88,4 @@
 {% endwith %}
 <script src="{% static "js/echartsTheme.js" %}"></script>
 <script src="{% static "js/byExpedition.js" %}"></script>
-<script>
-
-</script>
 {% endblock %}
