--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block content %}
-    {% header "Perfil deá carga" "por ruta" %}
+    {% header "Perfil de carga" "por ruta" %}
 
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
