travel: subway layer, layer control and WIP for sector layer

--- a/travel/static/travel/css/map.css
+++ b/travel/static/travel/css/map.css
@@ -28,3 +28,8 @@
     margin-right: 8px;
     opacity: 0.7;
 }
+
+.leaflet-control-layers-overlays span { 
+    color: #555;
+    font-weight: 200;
+}
