travel: viajes 4 etapas elastic search controller, query and dummy view files

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -70,6 +70,7 @@
                 <ul class="nav child_menu">
                     <li><a href=" {% url "travel:graphs" %} ">Resumen</a></li>
                     <li><a href=" {% url "travel:map" %} ">Mapa</a></li>
+                    <li><a href=" {% url "travel:large-travels" %} ">Viajes de 4 Etapas</a></li>
                     {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
                 </ul>
               </li>
