--- a/travel/static/travel/css/large.css
+++ b/travel/static/travel/css/large.css
@@ -33,3 +33,12 @@
     color: #555;
     font-weight: 200;
 }
+
+.netapas_checkbox_div {
+    padding: 5px 0px;
+    margin-left: 20px;
+}
+
+.netapas_checkbox_div span {
+    margin-left: 10px;
+}
