--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base_site.html' %}
 {% load static %}
 
-{% block title %}Indicadores: Viajes de 4 Etapas{% endblock %}
+{% block title %}Indicadores: Viajes por Etapas{% endblock %}
 
 {% block css %}
 
@@ -12,6 +12,10 @@
         <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
+
+        {# switchery: pretty checkboxes #}
+        <link href="{% static gentelella_static|add:"switchery/dist/switchery.min.css" %}" rel="stylesheet">
+
         <!-- iCheck -->
         <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
     {% endwith %}
@@ -28,7 +32,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Viajes de 4+ Etapas
+                <h3>Viajes por Etapas
                     <small>Indicadores</small>
                 </h3>
             </div>
@@ -72,7 +76,6 @@
                         </div>
 
                         <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-                            {# <div class="ln_solid"></div> #}
                             <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">
                                 Actualizar datos
                             </button>
@@ -85,8 +88,54 @@
 
         <div class="row">
 
+            {# Selection Bar #}
+            <div class="col-md-3 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
+                            <small></small>
+                        </h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content" style="height:500px">
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <label>Cantidad de Etapas:</label>
+                            <p class="text-warning">*Esto actualizará automáticamente los datos.</p>
+                            <div class="netapas_checkbox_div">
+                                <input id="netapas_1" type="checkbox" class="netapas_checkbox" data-ne-str="1" />
+                                <span class="control-label">1 etapa</span>
+                            </div>
+                            <div class="netapas_checkbox_div">
+                                <input id="netapas_2" type="checkbox" class="netapas_checkbox" data-ne-str="2" />
+                                <span class="control-label">2 etapas</span>
+                            </div>
+                            <div class="netapas_checkbox_div">
+                                <input id="netapas_3" type="checkbox" class="netapas_checkbox" data-ne-str="3" />
+                                <span class="control-label">3 etapas</span>
+                            </div>
+                            <div class="netapas_checkbox_div">
+                                <input id="netapas_4" type="checkbox" class="netapas_checkbox" data-ne-str="4" checked />
+                                <span class="control-label">4 etapas</span>
+                            </div>
+                            <div class="netapas_checkbox_div">
+                                <input id="netapas_5_or_more" type="checkbox" class="netapas_checkbox" data-ne-str="5+" checked />
+                                <span class="control-label">5+ etapas</span>
+                            </div>
+                        </div>
+
+                        <!--
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="vizSelector">Variable a mostrar:</label>
+                            <select class="form-control" id='vizSelector'>
+                            </select>
+                        </div>
+                        -->
+                    </div>
+                </div>
+            </div>
+
             {# Map #}
-            <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="col-md-9 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
@@ -94,8 +143,8 @@
                         </h2>
                         <div class="clearfix"></div>
                     </div> 
-                    <div class="x_content">
-                        <div id="mapChart" style="height:400px;"></div>
+                    <div class="x_content" style="height:500px">
+                        <div id="mapChart" style="height:inherit;"></div>
                     </div>
                 </div>
             </div>
@@ -115,6 +164,10 @@
         <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
+
+        {# switchery: pretty checkboxes #}
+        <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
+
     {% endwith %}
 
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
@@ -148,7 +201,7 @@
     <script src="{% static "travel/js/util.js" %}"></script>
     <script src="{% static "travel/js/maps.js" %}"></script>
     <script src="{% static "travel/js/form.js" %}"></script>
-    <script src="{% static "travel/js/data.js" %}"></script>
+    <script src="{% static "travel/js/travel_large_options.js" %}"></script>
     <script src="{% static "travel/js/travel_large.js" %}"></script>
 
 {% endblock %}
