travel: histograms view

--- a/travel/templates/travel/graphs.html
+++ b/travel/templates/travel/graphs.html
@@ -94,6 +94,10 @@
                     </div>
                     <div class="x_content" style="height:500px">
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <p>Nota: Todos los conteos de viajes consideran factor de expansión.</p>
+                        </div>
+                        
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label class="control-label" for="vizSelector">Variable a mostrar:</label>
                             <select class="form-control" id='vizSelector'>
                             </select>
@@ -107,7 +111,7 @@
             <div class="col-md-9 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2><i class="fa fa-clock-o"></i> <span id="graphTitle">Histograma</span>
+                        <h2><i class="fa fa-bar-chart-o"></i> <span id="graphTitle">Histograma</span>
                             <small><strong id="visualization_type_doc_count">0</strong> viajes encontrados</small>
                         </h2>
                         <div class="clearfix"></div>
