--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -99,6 +99,9 @@
                     </div>
                     <div class="x_content" style="height:500px">
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <p>Nota: Todos los conteos de viajes NO consideran factor de expansión.</p>
+                        </div>
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label>Cantidad de Etapas:</label>
                             <p class="text-warning">*Esto actualizará automáticamente los datos.</p>
                             <div class="netapas_checkbox_div">
