--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -94,6 +94,11 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content" style="height:500px">
+                        
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <p>Nota: Todos los conteos de viajes NO consideran factor de expansión.</p>
+                        </div>
+
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label class="control-label" for="sectorSelector">Sector de Destino:</label>
                             <select class="form-control" id='sectorSelector'>
