--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -37,7 +37,7 @@
         <div class="row">
 
             {# Selection Bar #}
-            <div class="col-md-3 col-sm-12 col-xs-12">
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
@@ -45,7 +45,7 @@
                         </h2>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="x_content" style="height:500px">
+                    <div class="x_content">
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <p>Nota: Todos los conteos de viajes NO consideran factor de expansión.</p>
                         </div>
@@ -73,20 +73,12 @@
                                 <span class="control-label">5+ etapas</span>
                             </div>
                         </div>
-
-                        <!--
-                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                            <label class="control-label" for="vizSelector">Variable a mostrar:</label>
-                            <select class="form-control" id='vizSelector'>
-                            </select>
-                        </div>
-                        -->
                     </div>
                 </div>
             </div>
 
             {# Map #}
-            <div class="col-md-9 col-sm-12 col-xs-12">
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
