--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -33,7 +33,7 @@
         <div class="row">
 
             {# Selection Bar #}
-            <div class="col-md-3 col-sm-12 col-xs-12">
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
@@ -41,7 +41,7 @@
                         </h2>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="x_content" style="height:500px">
+                    <div class="x_content">
                         
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <p>Nota: Todos los conteos de viajes NO consideran factor de expansión.</p>
@@ -49,13 +49,13 @@
 
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label class="control-label" for="sectorSelector">Sector de Destino:</label>
-                            <select class="form-control" id='sectorSelector'>
+                            <select class="form-control" id='sectorSelector' style="width: 100%">
                             </select>
                         </div>
 
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label class="control-label" for="vizSelector">Variable a mostrar:</label>
-                            <select class="form-control" id='vizSelector'>
+                            <select class="form-control" id='vizSelector' style="width: 100%">
                             </select>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
             </div>
 
             {# Map #}
-            <div class="col-md-9 col-sm-12 col-xs-12">
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
