--- a/travel/templates/travel/filters.html
+++ b/travel/templates/travel/filters.html
@@ -5,6 +5,10 @@
                 <h2><i class="fa fa-filter"></i> Filtros
                     <small></small>
                 </h2>
+                <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                </ul>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
